# bumplot

./: .coverage  .gitignore  404.html  Makefile  README.md  index.html  justfile  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
advanced-usage/: index.html
bumplot/: __init__.py  _utils.py  bezier.py  geoms.py  main.py  opts.py
contributing/: index.html
docs/: README.qmd  advanced-usage.md  contributing.md  examples.md  index.md
docs/data/: water-africa.csv
docs/reference/: add_digit.md  bezier.md  bumplot.md
examples/: index.html
overrides/partials/: footer.html
reference/bezier/: index.html
reference/bumplot/: index.html
search/: search_index.json
stylesheets/: style.css
tests/: test_main.py  test_opts.py
